--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@ canvas#stars{position:fixed;inset:0;z-index:0;pointer-events:none}
 @media(max-width:380px){.hero h1{font-size:25px}.grid{gap:10px}.cd{padding:22px 12px 18px}.fc{padding:22px 16px}.pls{gap:6px}.pl{padding:10px 4px}.pl .plh{font-size:18px}}
 ::-webkit-scrollbar{width:4px}::-webkit-scrollbar-track{background:transparent}::-webkit-scrollbar-thumb{background:var(--gd);border-radius:4px}
 </style>
+<!-- Danggeun Market Code -->
+<script src="https://karrot-pixel.business.daangn.com/karrot-pixel.js"></script>
+<script>
+  window.karrotPixel.init('1771573647292697001');
+  window.karrotPixel.track('ViewPage');
+</script>
+<!-- End Danggeun Market Code -->
 </head>
 <body>
 <div id="cosmos"></div><canvas id="stars"></canvas>
