--- a/index.html
+++ b/index.html
@@ -199,19 +199,273 @@ canvas#stars{position:fixed;inset:0;z-index:0;pointer-events:none}
       <div class="fg"><label class="fl">연락처 (선택)</label><input type="tel" class="fi" id="iPhone" placeholder="010-0000-0000"></div>
       <div class="fg"><label class="fl">이메일 (선택)</label><input type="email" class="fi" id="iEmail" placeholder="example@email.com"></div>
     </div>
-    <div class="cc">
-      <div class="ct">📋 개인정보 수집 및 이용 동의</div>
-      <div class="cx"><h4>1. 수집 항목</h4>필수: 이름, 성별, 생년월일 / 선택: 태어난 시간, 연락처, 이메일<h4>2. 이용 목적</h4>무료 사주/운세 서비스 제공, 맞춤 분석, 서비스 개선, 이벤트 안내(동의 시)<h4>3. 보유 기간</h4>동의일로부터 1년간 보유 후 즉시 파기<h4>4. 동의 거부 권리</h4>거부 가능하며, 필수 항목 거부 시 서비스 이용 제한<h4>5. 제3자 제공</h4>수집된 정보는 제3자에게 제공하지 않습니다.</div>
+<div class="cc">
+      <div class="ct">📋 개인정보 수집·이용 및 광고 활용 동의</div>
+      <div class="cx">
+        <h4>1. 수집 항목</h4>
+        <b>[필수]</b> 이름, 성별, 생년월일<br>
+        <b>[선택]</b> 태어난 시간, 연락처(휴대전화번호), 이메일 주소
+
+        <h4>2. 수집·이용 목적</h4>
+        <b>가. 필수 목적</b><br>
+        · 무료 사주/운세/궁합/타로 분석 서비스 제공<br>
+        · 맞춤형 운세 결과 생성 및 분석 정확도 향상<br>
+        · 서비스 이용 통계 분석 및 품질 개선<br><br>
+        <b>나. 선택 목적 (마케팅 동의 시)</b><br>
+        · 신규 운세 콘텐츠, 이벤트, 프로모션 정보 발송 (SMS, 이메일, 카카오 알림톡 등)<br>
+        · 맞춤형 상품 추천 및 제휴 서비스 안내<br>
+        · 온라인 맞춤형 광고 제공을 위한 광고 식별자 수집 및 활용
+
+        <h4>3. 온라인 행태정보 수집 및 광고 활용</h4>
+        본 서비스는 이용자에게 최적화된 맞춤형 광고 및 콘텐츠를 제공하기 위해 아래와 같이 행태정보를 수집·활용합니다.<br><br>
+
+        <b>가. 수집하는 행태정보 항목</b><br>
+        · 웹사이트 방문 기록, 페이지 조회 이력, 서비스 이용 패턴<br>
+        · 광고 클릭 식별자: Facebook Pixel ID(_fbp, _fbc), Google Click ID(gclid), TikTok Click ID(ttclid), 카카오 Click ID(kclid), 당근마켓 Click ID(dclid), YouTube Click ID(yclid), 네이버 전환 추적 ID<br>
+        · 쿠키(Cookie) 및 유사한 기술을 통해 자동 수집되는 기기 정보, 브라우저 정보, 접속 IP, 접속 시간, 유입 경로(Referrer), UTM 파라미터<br><br>
+
+        <b>나. 제3자 광고 플랫폼 행태정보 수집 허용</b><br>
+        본 서비스는 아래 제3자 광고 플랫폼이 이용자의 행태정보를 수집·처리하도록 허용하고 있습니다:<br><br>
+
+        <table style="width:100%;border-collapse:collapse;font-size:10.5px;line-height:1.6">
+          <tr style="border-bottom:1px solid rgba(212,168,74,.2)">
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700;width:30%">광고 플랫폼</td>
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700">수집 항목</td>
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700;width:30%">활용 목적</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">Meta (Facebook/Instagram)</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, _fbp, _fbc 쿠키</td>
+            <td style="padding:5px 4px">맞춤형 광고, 유사 타겟(Lookalike Audience) 생성</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">Google Ads / YouTube</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, gclid, 쿠키</td>
+            <td style="padding:5px 4px">리마케팅 광고, 유사 잠재고객 확장, 전환 최적화</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">Google Analytics 4</td>
+            <td style="padding:5px 4px">방문 행태, 이벤트, 기기정보, 세션 데이터</td>
+            <td style="padding:5px 4px">서비스 분석, 잠재고객 세그먼트 생성, 광고 최적화</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">TikTok Ads</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, ttclid</td>
+            <td style="padding:5px 4px">맞춤형 광고, 유사 타겟 생성, 전환 추적</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">카카오 모먼트</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, kclid</td>
+            <td style="padding:5px 4px">카카오 맞춤형 광고, 유사 타겟 생성</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">네이버 광고 (검색광고/GFA)</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, 네이버 로그분석 데이터</td>
+            <td style="padding:5px 4px">네이버 맞춤형 광고, 전환 추적, 유사 타겟 확장</td>
+          </tr>
+          <tr>
+            <td style="padding:5px 4px">당근마켓 비즈니스</td>
+            <td style="padding:5px 4px">페이지 방문, 전환 이벤트, dclid</td>
+            <td style="padding:5px 4px">당근마켓 맞춤형 광고, 전환 추적</td>
+          </tr>
+        </table><br>
+
+        <b>다. 맞춤형 광고 및 유사 타겟(Lookalike Audience) 활용</b><br>
+        · 이용자의 서비스 이용 데이터(방문, 전환 이벤트 등)를 기반으로 위 광고 플랫폼에서 <b>유사한 관심사를 가진 잠재 고객을 찾기 위한 유사 타겟(Lookalike Audience)</b>을 생성할 수 있습니다.<br>
+        · 유사 타겟 생성 시 이용자의 개인정보가 직접 제3자에게 전달되지 않으며, 각 플랫폼의 암호화된 매칭 기술을 통해 비식별 처리된 형태로 활용됩니다.<br>
+        · 수집된 행태정보를 활용하여 이용자의 관심사에 맞는 <b>리타겟팅(Retargeting) 광고</b>가 위 플랫폼 내에서 노출될 수 있습니다.<br><br>
+
+        <b>라. 행태정보 수집 거부 방법</b><br>
+        이용자는 아래 방법으로 행태정보 수집 및 맞춤형 광고를 거부할 수 있습니다:<br>
+        · <b>웹 브라우저 쿠키 차단:</b> 브라우저 설정 > 개인정보/보안 > 쿠키 삭제 또는 제3자 쿠키 차단<br>
+        · <b>Google 광고 설정:</b> adssettings.google.com 에서 맞춤형 광고 비활성화<br>
+        · <b>Meta 광고 설정:</b> facebook.com/adpreferences 에서 광고 기본 설정 변경<br>
+        · <b>TikTok 광고 설정:</b> TikTok 앱 > 설정 > 개인정보 > 광고 맞춤 설정 해제<br>
+        · <b>카카오 광고 설정:</b> 카카오 계정 설정 > 개인정보 > 맞춤형 광고 수신 설정<br>
+        · <b>네이버 광고 설정:</b> nid.naver.com > 내정보 > 맞춤형 광고 > 관심사 기반 광고 해제<br>
+        ※ 쿠키 차단 시에도 서비스 이용에는 영향이 없으나, 맞춤형 콘텐츠 제공이 제한될 수 있습니다.
+
+        <h4>4. 개인정보의 제3자 제공</h4>
+        <b>가. 필수 제공 사항</b><br>
+        원칙적으로 이용자의 개인정보를 외부에 제공하지 않습니다.<br><br>
+        <b>나. 마케팅 동의 시 제3자 제공</b><br>
+        마케팅 수신에 동의하신 경우, 아래와 같이 제3자에게 정보가 제공될 수 있습니다:<br><br>
+
+        <table style="width:100%;border-collapse:collapse;font-size:10.5px;line-height:1.6">
+          <tr style="border-bottom:1px solid rgba(212,168,74,.2)">
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700;width:25%">제공받는 자</td>
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700">제공 항목</td>
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700;width:25%">제공 목적</td>
+            <td style="padding:6px 4px;color:#d4a84a;font-weight:700;width:15%">보유 기간</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">Meta Platforms, Inc.</td>
+            <td style="padding:5px 4px">암호화된 이메일, 연락처 (Custom Audience용)</td>
+            <td style="padding:5px 4px">맞춤형 광고 타겟팅, 유사 타겟 생성</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">Google LLC</td>
+            <td style="padding:5px 4px">암호화된 이메일 (Customer Match용)</td>
+            <td style="padding:5px 4px">맞춤형 광고, 유사 잠재고객 확장</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">ByteDance Ltd. (TikTok)</td>
+            <td style="padding:5px 4px">암호화된 이메일, 연락처</td>
+            <td style="padding:5px 4px">맞춤형 광고 타겟팅</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">카카오 주식회사</td>
+            <td style="padding:5px 4px">암호화된 연락처</td>
+            <td style="padding:5px 4px">카카오 맞춤형 광고</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+          <tr style="border-bottom:1px solid rgba(212,168,74,.1)">
+            <td style="padding:5px 4px">네이버 주식회사</td>
+            <td style="padding:5px 4px">전환 추적 데이터</td>
+            <td style="padding:5px 4px">네이버 맞춤형 광고</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+          <tr>
+            <td style="padding:5px 4px">㈜당근마켓</td>
+            <td style="padding:5px 4px">전환 추적 데이터</td>
+            <td style="padding:5px 4px">당근마켓 맞춤형 광고</td>
+            <td style="padding:5px 4px">동의 철회 시까지</td>
+          </tr>
+        </table>
+
+        <h4>5. 개인정보의 처리 위탁</h4>
+        · 위탁받는 자: Google LLC (Google Sheets, Google Apps Script)<br>
+        · 위탁 업무: 이용자 데이터 저장 및 운세 분석 결과 생성<br>
+        · 위탁 기간: 서비스 제공 기간 또는 위탁 계약 종료 시까지
+
+        <h4>6. 보유 및 이용 기간</h4>
+        · 필수 항목: 동의일로부터 <b>1년간</b> 보유 후 즉시 파기<br>
+        · 선택 항목(마케팅): 동의 철회 시 또는 동의일로부터 <b>2년 중 먼저 도래하는 시점</b>에 파기<br>
+        · 광고 행태정보(쿠키 등): 수집일로부터 <b>180일</b> 보관 후 자동 삭제<br>
+        · 단, 관계 법령에 의해 보존 의무가 있는 경우 해당 기간 동안 별도 분리 보관
+
+        <h4>7. 동의 거부 권리 및 불이익</h4>
+        · 이용자는 개인정보 수집·이용에 대한 동의를 거부할 권리가 있습니다.<br>
+        · <b>필수 항목</b> 동의 거부 시: 운세 분석 서비스 이용이 제한됩니다.<br>
+        · <b>선택 항목(마케팅)</b> 동의 거부 시: 서비스 이용에는 제한이 없으나, VVIP 심층 분석 및 맞춤 혜택 제공이 제한됩니다.<br>
+        · 동의 후에도 jj-fortune@gmail.com으로 언제든 동의 철회를 요청할 수 있습니다.
+
+        <h4>8. 정보주체의 권리·의무</h4>
+        · 이용자는 언제든 자신의 개인정보에 대한 <b>열람, 정정, 삭제, 처리정지</b>를 요청할 수 있습니다.<br>
+        · 요청 방법: jj-fortune@gmail.com 으로 본인 확인 후 처리<br>
+        · 처리 기간: 요청일로부터 10일 이내 조치 완료
+
+        <h4>9. 개인정보 보호책임자</h4>
+        · 성명: 제이제이포춘 운영팀<br>
+        · 연락처: jj-fortune@gmail.com<br>
+        · 개인정보 관련 고충은 위 연락처로 문의 시 신속히 처리하겠습니다.
+      </div>
+
       <div class="cks">
         <label class="ck al"><input type="checkbox" id="ckAll" onchange="ta(this)"> 전체 동의하기</label>
-        <label class="ck"><input type="checkbox" class="ci" id="ck1" required> [필수] 개인정보 수집 및 이용에 동의합니다</label>
+        <label class="ck"><input type="checkbox" class="ci" id="ck1" required> [필수] 개인정보 수집·이용에 동의합니다</label>
+        <label class="ck"><input type="checkbox" class="ci" id="ck1b"> [필수] 온라인 행태정보 수집 및 광고 플랫폼 제3자 제공에 동의합니다</label>
         <label class="ck" style="padding:0">
           <div class="vvip-teaser">
             <div style="display:flex;align-items:center;gap:10px;margin-bottom:8px">
               <input type="checkbox" class="ci" id="ck2" style="width:20px;height:20px">
-              <span style="font-weight:800;color:var(--gb);font-size:14px">[선택] 마케팅 동의</span>
+              <span style="font-weight:800;color:var(--gb);font-size:14px">[선택] 마케팅 활용 및 광고성 정보 수신 동의</span>
               <span style="background:linear-gradient(135deg,#d4a84a,#b8860b);color:#fff;font-size:10px;font-weight:800;padding:2px 8px;border-radius:10px">5만원 무료</span>
             </div>
+            <div style="font-size:11px;color:var(--t2);line-height:1.8;padding-left:30px">
+              ✅ 동의 시 즉시 제공되는 <b style="color:#d4a84a">VVIP 심층 사주</b>:<br>
+              &nbsp;&nbsp;💎 숨겨진 운명의 비밀 해석<br>
+              &nbsp;&nbsp;📅 2026년 1~12월 월별 상세 운세<br>
+              &nbsp;&nbsp;⚡ 인생 전환점 시기 예측<br>
+              &nbsp;&nbsp;💰 재물·투자 심층 전략 + 풍수 비법<br>
+              &nbsp;&nbsp;💑 운명적 인연 만나는 시기·장소<br><br>
+              <span style="font-size:10px;color:var(--t3)">
+                · SMS, 이메일, 카카오 알림톡, 앱 푸시 등을 통한 광고성 정보 수신에 동의합니다<br>
+                · 유사 타겟(Lookalike) 광고 활용을 위한 제3자 제공에 동의합니다<br>
+                · 동의는 언제든 철회 가능하며, 철회 시 VVIP 혜택이 중단됩니다
+              </span>
+            </div>
+          </div>
+        </label>
+      </div>
+      <div style="margin-top:10px;text-align:right"><button type="button" style="background:none;color:var(--gd);font-size:12px;text-decoration:underline;font-family:'Noto Sans KR',sans-serif;border:none;cursor:pointer" onclick="document.getElementById('pvM').classList.add('show')">전문 보기</button></div>
+    </div>
+
+
+<!-- ═══════════════════════════════════════════════════════
+     ★ 교체할 부분 2: 개인정보 처리방침 모달 (기존 <div class="mo" id="pvM"> 전체를 교체)
+     ═══════════════════════════════════════════════════════ -->
+
+<div class="mo" id="pvM"><div class="mb"><h3>📜 개인정보 처리방침</h3><div class="pf">
+<h4>제1조 (개인정보의 수집·이용 목적)</h4>
+① 무료 사주/운세/궁합/타로 서비스 제공 및 맞춤 분석<br>
+② 서비스 이용 통계 분석 및 품질 개선<br>
+③ 마케팅 동의 시: 이벤트·프로모션·신규 서비스 안내, 맞춤형 상품 추천<br>
+④ 온라인 맞춤형 광고 제공 및 광고 효과 측정
+
+<h4>제2조 (수집하는 개인정보 항목)</h4>
+<b>[필수]</b> 이름, 성별, 생년월일<br>
+<b>[선택]</b> 태어난 시간, 연락처, 이메일<br>
+<b>[자동 수집]</b> 접속 IP, 쿠키, 브라우저 정보, 방문 기록, 기기 정보, 광고 클릭 식별자(gclid, fbclid, ttclid, kclid, dclid, yclid), UTM 파라미터, 접속 시간, 유입 경로(Referrer)
+
+<h4>제3조 (보유 및 이용 기간)</h4>
+① 필수 항목: 동의일로부터 1년간 보유 후 즉시 파기<br>
+② 선택 항목(마케팅): 동의 철회 시 또는 동의일로부터 2년 중 먼저 도래하는 시점에 파기<br>
+③ 광고 행태정보: 수집일로부터 180일 보관 후 자동 삭제<br>
+④ 법령에 의한 보존 의무가 있는 경우: 해당 법령이 정한 기간 동안 별도 분리 보관 (예: 전자상거래 등에서의 소비자보호에 관한 법률에 따른 표시·광고에 관한 기록 6개월)
+
+<h4>제4조 (개인정보의 제3자 제공)</h4>
+① 원칙적으로 이용자의 개인정보를 외부에 제공하지 않습니다.<br>
+② 마케팅 동의 시 아래 제3자에게 제공될 수 있습니다:<br>
+- Meta Platforms, Inc.: 암호화된 이메일·연락처 → 맞춤형 광고, 유사 타겟(Lookalike Audience) 생성<br>
+- Google LLC: 암호화된 이메일 → Customer Match, 유사 잠재고객 확장<br>
+- ByteDance Ltd. (TikTok): 암호화된 이메일·연락처 → 맞춤형 광고 타겟팅<br>
+- 카카오 주식회사: 암호화된 연락처 → 카카오 맞춤형 광고<br>
+- 네이버 주식회사: 전환 추적 데이터 → 네이버 맞춤형 광고<br>
+- ㈜당근마켓: 전환 추적 데이터 → 당근마켓 맞춤형 광고<br>
+③ 유사 타겟 생성 시 개인정보는 각 플랫폼의 암호화 매칭 기술을 통해 비식별 처리된 형태로 활용됩니다.
+
+<h4>제5조 (개인정보의 처리 위탁)</h4>
+위탁받는 자: Google LLC (Google Sheets, Google Apps Script)<br>
+위탁 업무: 이용자 데이터 저장 및 운세 분석 결과 생성<br>
+위탁 기간: 서비스 제공 기간 또는 위탁 계약 종료 시까지
+
+<h4>제6조 (온라인 행태정보의 수집·이용 및 거부)</h4>
+① 본 서비스는 Meta Pixel, Google Analytics, Google Ads Tag, TikTok Pixel, 카카오 Pixel, 당근마켓 Pixel, 네이버 전환 추적 스크립트를 통해 이용자의 웹사이트 방문·이용 행태정보를 수집합니다.<br>
+② 수집된 행태정보는 맞춤형 광고 제공, 광고 효과 측정, 유사 타겟(Lookalike Audience) 생성에 활용됩니다.<br>
+③ 이용자는 아래 방법으로 행태정보 수집 및 맞춤형 광고를 거부할 수 있습니다:<br>
+- 웹 브라우저 설정에서 쿠키 삭제 또는 제3자 쿠키 차단<br>
+- Chrome: 설정 > 개인정보 및 보안 > 제3자 쿠키 > 제3자 쿠키 차단<br>
+- Safari: 설정 > Safari > 크로스 사이트 추적 방지 활성화<br>
+- 각 광고 플랫폼 설정 페이지에서 맞춤형 광고 비활성화<br>
+④ 쿠키 차단 시에도 서비스 이용에는 영향이 없으나, 맞춤형 콘텐츠 제공이 제한될 수 있습니다.
+
+<h4>제7조 (파기 방법)</h4>
+① 전자파일: 기술적 방법을 사용하여 복원이 불가능한 방법으로 영구 삭제<br>
+② 종이 문서: 해당 사항 없음 (전자적 처리만 진행)
+
+<h4>제8조 (정보주체의 권리·의무 및 행사방법)</h4>
+① 이용자는 언제든 자신의 개인정보에 대해 열람, 정정, 삭제, 처리정지를 요청할 수 있습니다.<br>
+② 요청 방법: jj-fortune@gmail.com으로 본인 확인 후 처리<br>
+③ 처리 기간: 요청일로부터 10일 이내 조치 완료<br>
+④ 대리인을 통해 권리를 행사할 수 있으며, 이 경우 위임장을 제출해야 합니다.<br>
+⑤ 마케팅 동의 철회: 위 이메일로 요청 시 즉시 처리되며, 이후 광고성 정보가 발송되지 않습니다.
+
+<h4>제9조 (개인정보 보호책임자)</h4>
+성명: 제이제이포춘 운영팀<br>
+연락처: jj-fortune@gmail.com<br><br>
+기타 개인정보침해 관련 상담은 아래 기관에 문의하실 수 있습니다:<br>
+- 개인정보침해 신고센터 (privacy.kisa.or.kr / ☎ 118)<br>
+- 개인정보분쟁조정위원회 (kopico.go.kr / ☎ 1833-6972)<br>
+- 대검찰청 사이버수사과 (spo.go.kr / ☎ 1301)<br>
+- 경찰청 사이버수사국 (police.go.kr / ☎ 182)
+
+<h4>제10조 (개인정보 처리방침의 변경)</h4>
+본 개인정보 처리방침은 2026년 2월 20일부터 적용됩니다. 변경 시 웹사이트 공지사항을 통해 사전 고지합니다.
+</div><button class="mc" onclick="document.getElementById('pvM').classList.remove('show')">확인</button></div></div>
             <div style="font-size:11px;color:var(--t2);line-height:1.8;padding-left:30px">
               ✅ 동의 시 즉시 제공되는 <b style="color:#d4a84a">VVIP 심층 사주</b>:<br>
               &nbsp;&nbsp;💎 숨겨진 운명의 비밀 해석<br>
